<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Nested screen #1" >

    <PreferenceCategory
        android:title="@string/action_exercises_summary">

        <CheckBoxPreference
            android:title="@string/acte"
            android:summary="@string/actee"
            android:defaultValue="true"
            android:key="act1" />

        <CheckBoxPreference
            android:title="@string/act_2e"
            android:summary="@string/act_2ee"
            android:defaultValue="true"
            android:key="act2" />

        <CheckBoxPreference
            android:title="@string/act_3e"
            android:summary="@string/act_3ee"
            android:defaultValue="true"
            android:key="act3" />

        <CheckBoxPreference
            android:title="@string/act_4e"
            android:summary="@string/act_4ee"
            android:defaultValue="true"
            android:key="act4" />

        <CheckBoxPreference
            android:title="@string/act_5e"
            android:summary="@string/act_5ee"
            android:defaultValue="true"
            android:key="act5" />

        <CheckBoxPreference
            android:title="@string/act_6e"
            android:summary="@string/act_6ee"
            android:defaultValue="true"
            android:key="act6" />

        <CheckBoxPreference
            android:title="@string/act_7e"
            android:summary="@string/act_7ee"
            android:defaultValue="true"
            android:key="act7" />

        <CheckBoxPreference
            android:title="@string/act_8e"
            android:summary="@string/act_8ee"
            android:defaultValue="true"
            android:key="act8" />

        <CheckBoxPreference
            android:title="@string/act_9e"
            android:summary="@string/act_9ee"
            android:defaultValue="true"
            android:key="act9" />

        <CheckBoxPreference
            android:title="@string/act_10e"
            android:summary="@string/act_10ee"
            android:defaultValue="true"
            android:key="act10" />

        <CheckBoxPreference
            android:title="@string/act_11e"
            android:summary="@string/act_11ee"
            android:defaultValue="true"
            android:key="act11" />

        <CheckBoxPreference
            android:title="@string/act_12e"
            android:summary="@string/act_12ee"
            android:defaultValue="true"
            android:key="act12" />

    </PreferenceCategory>
</PreferenceScreen>