<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".workouts.MainActivity1">

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/sort"
        android:icon="@drawable/sort_descending"
        app:showAsAction="ifRoom" >
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/ex_icon"
                android:title="@string/sort_icon" />
            <item android:id="@+id/ex_number"
                android:title="@string/sort_number" />
            <item android:id="@+id/ex_hms"
                android:title="@string/sort_hms" />
            <item android:id="@+id/ex_average"
                android:title="@string/sort_average" />
        </menu>
    </item>

</menu>
